@@ -1,11 +1,8 @@
 DIST flash-plugin-9.0.115.0-release.i386.rpm 3032220 RMD160 e54a3c08a0aa1fb8e059955387e8c0db921f7f72 SHA1 dc6b3570da9e5e7c2dd222d37be79cb704c26363 SHA256 71b62bebb8b8d83de0e2572689e4e17d0be282e37a066fbd82626da69bf7e67b
 DIST flash-plugin-9.0.124.0-release.i386.rpm 3038166 RMD160 3abfc30b66a90123affa338b4d307d5139947845 SHA1 55b4e0726086eca49b2318b620f568a095767d27 SHA256 2fe2c0ac40b18ea26f88748c2e12b5e46ec865b077d834f0628df7c9fb45590b
-DIST flash-plugin-9.0.48.0-release.i386.rpm 2606152 RMD160 cc0eb48fab725d9f7b2e5974a6e253295b09a8bd SHA1 fd0934c9d57c50fdf78f327fe55541232a68eded SHA256 e80f4a3926d3b8fc4a5b48d5f45fc9c070e953e137c1a047b31f29404338088f
-DIST flash_player_9_linux_dev.tar.gz 8820378 RMD160 c7722e407c4183d25c05c3480cb49b25829af2da SHA1 65487c73f4164f0989e9304ca59ae714952899cf SHA256 96ec80200509f2b3d1701d487a80f958c12cc36728d1f2b4308ff98da79cfe0c
-DIST install_flash_player_9_linux.tar.gz 2608602 RMD160 4eea521f45fcd42e6916ba61ba299df8694fbc14 SHA1 4bba0b81462394388b4509ecdc845f469c95d6ae SHA256 ad2f9eb98e976a82b62e97e7cf3a555464e43b80507b87ed7c469706faa4d897
+DIST flashplayer10_install_linux_051508.tar.gz 3912377 RMD160 c097ad237fc93e3ad42c01efe38b384058b7f23f SHA1 173160087ad5aa0294b79403a74d145c0820a40b SHA256 21d51a792c0283e376c05d36542307e361f16ba5579402687c77812e89c70a97
+EBUILD netscape-flash-10_beta20080515.ebuild 1523 RMD160 72aafc8908fb3d3cb5e40f3a7cc32e0c6041eb44 SHA1 5b70ef1a4842306d0e5ed1b8e8ecb188deeb9f78 SHA256 ea16bbe22326b7716958121c1a8caf351403fa7e081a569468a87ad0196817ad
 EBUILD netscape-flash-9.0.115.0.ebuild 1297 RMD160 04ff73317e89bdf03258d83ed71282306e45ed53 SHA1 978901140d56a41f4e2b192a4ba3f79e74a98540 SHA256 a22454c9189374856fac41b72dad651e063213da0612a8aa1c72f1246d913048
 EBUILD netscape-flash-9.0.124.0.ebuild 1296 RMD160 ed03cf5ea1ba7cff76d3453ea0c4a36ecf639dfc SHA1 02922cc8c90ff299fbf9093b78cdfe1ecf5f2342 SHA256 470bbec007d603e63503e0617ff7943337f313eabfe4371705100c9e17d96001
-EBUILD netscape-flash-9.0.48.0-r1.ebuild 1292 RMD160 6ce1156476584e8bb288dcc89a10feef1743dbac SHA1 88dafd6e2598e84905e240f6d3a936097f120d08 SHA256 88d1d56cb0bcc6c6151d8826c08aff98be85d74b8b80bc841e96ad7da7c59684
-EBUILD netscape-flash-9.0.48.0.ebuild 1930 RMD160 21963441cf2425d866ac2847ad864859916024d1 SHA1 2246ddf2d41cfd2b949515d056a7b451e6cc3ec8 SHA256 869f3b72ba1b24ae61e895318c09c13d28b0018d2bc0729a571dbcb21506f8fa
-MISC ChangeLog 10863 RMD160 44c2a212e0664b9fed7ed3c0b3617c0e79061a54 SHA1 45eadc25e05652fc0f1ebff0afcfa951ba2f6f77 SHA256 3e3fa6c1929d01647511281a6359333216f4680bf876ec31db129a21bd56eccd
+MISC ChangeLog 11058 RMD160 b4f7a6e596d0c97488899b92b6f8dfb4191edfe1 SHA1 f7a6b4f0d78f090938fc191486531ed1fa3c716e SHA256 0504a3d27222133d778f84c63fe00fa3c3f58f215e772d6862bda72b23f77e25
 MISC metadata.xml 254 RMD160 1f5a6322e4956b30592a1e0caf7edc67613ecc43 SHA1 f0813ac26740fae9e0f0899b5dad74b5a6fd5b3c SHA256 740784d71bef88214e4d8508e351a376d8908f4c4b6175d98b6b77e107799f12
