@@ -1,6 +1,12 @@
 # ChangeLog for net-www/netscape-flash
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.66 2008/04/17 01:08:17 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/netscape-flash/ChangeLog,v 1.67 2008/05/15 14:35:11 lack Exp $
+
+*netscape-flash-10_beta20080515 (15 May 2008)
+
+  15 May 2008; Jim Ramsay <lack@gentoo.org>
+  +netscape-flash-10_beta20080515.ebuild:
+  New beta version of FlashPlayer-10 is released (Bug #222231)
 
   17 Apr 2008; Markus Meier <maekke@gentoo.org>
   netscape-flash-9.0.124.0.ebuild:
